# memory-check

./: 各类检测工具概述.md
Asan-Lsan/: Asan.md  lsan.md
Asan-Lsan/examples/CmakeLists/: CMakeLists.txt  fun1.c  fun1.h  fun2.h  main.c
Asan-Lsan/examples/Makefile/: Makefile  fun2.c
Asan-Lsan/examples/memory-errors/All_Memory_Errors/: All-Memory-Errors.cpp  a.out
Asan-Lsan/examples/memory-errors/global_buffer_overflow/: global-overflow.c
Asan-Lsan/examples/memory-errors/heap_buffer_overflow/: heap-overflow.cpp
Asan-Lsan/examples/memory-errors/init_order_bugs/: a.cpp  a.out  b.cpp
Asan-Lsan/examples/memory-errors/memory leaks/: a.out  lsan-suppressed.c  memory-leak.c  suppr.txt
Asan-Lsan/examples/memory-errors/stack_buffer_flow/: a.out  stack-buffer-overflow.c
Asan-Lsan/examples/memory-errors/use-after-return/: a.out  use-after-return.c
Asan-Lsan/examples/memory-errors/use-after-scope/: a.out  use-after-scope.cpp
Asan-Lsan/examples/memory-errors/use_after_free/: a.out  use-after-free.c
valgrind/: valgrind介绍与使用.md
